--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Management System</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-    <h1>Welcome to the Student Management System</h1>
-
-    <script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
+<%- include('partials/header') %>
+<div class="container">
+    <h1>Home</h1>
+</div>
+<%- include('partials/footer') %>
