added partials and dynamic routing

--- a/views/register_view.ejs
+++ b/views/register_view.ejs
@@ -1,5 +1,12 @@
 <%- include('partials/header') %>
-<div class="container">
+<!-- <div class="container">
     <%- include('partials/form', {title: 'Student Register Page', type: 'register'}) %>
+</div> -->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-3">
+            <%- include('partials/form2', {type:'Register'}) %>
+        </div>
+    </div>
 </div>
 <%- include('partials/footer') %>
