--- a/views/login_view.ejs
+++ b/views/login_view.ejs
@@ -1,5 +1,13 @@
 <%- include('partials/header') %>
-<div class="container">
+<!-- <div class="container">
     <%- include('partials/form', {title: 'Student Login Page', type: 'login'}) %>
+</div> -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-3">
+            <%- include('partials/form2', {type:'Login'}) %>
+        </div>
+    </div>
 </div>
 <%- include('partials/footer') %>
